fix: resolve static analysis issues in code
Fix various static analysis warnings including
- Use string format placeholders in log messages
- Fix keyword import ordering
- Improve generic type usage
- Optimize lambda expressions
- Apply consistent code style

These changes improve code quality and maintainability without changing functionality.